fix: Make application mobile responsive

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -14,3 +14,9 @@ input {
   border-radius: 4px;
   border: none;
 }
+
+@media screen and (max-width: 400px) {
+  .hide-mobile {
+    display: none;
+  }
+}
