--- a/src/app/components/movie-detail/movie-detail.component.scss
+++ b/src/app/components/movie-detail/movie-detail.component.scss
@@ -39,7 +39,6 @@ h1 span {
   background: $app-card-bg;
   padding: 0.5rem;
   border-radius: 8px;
-  width: 150px;
   text-align: center;
   color: $app-white;
 }
